--- a/custom.css
+++ b/custom.css
@@ -9,7 +9,8 @@ padding-bottom: 100px;
 }
 
 .navbar-brand {
-    font-family: 'Oswald' , sans-serif;
+    font-family: 'Lato' , sans-serif;
+    font-weight: 300;
 }
 
 img {
@@ -18,7 +19,8 @@ img {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 .jumbotron {
@@ -30,13 +32,16 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-    font-family: 'Droid Serif', serif;
+    font-family: 'Old+Standard+TT', serif;
+    font-size: 16px;
 }
 
 .navbar-default {
     background-color: darkolivegreen;
     border-color: azure;
     color: white;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
 }
 
 .navbar-default .navbar-brand {
@@ -45,7 +50,7 @@ p {
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-    color:red;
+    color:black;
     background-color:transparent;
 }
 
@@ -62,13 +67,14 @@ p {
 
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-    color:red;
+    color:black;
     background-color:transparent;
 }
 
 
 iframe {
     padding-top:10px;
+    padding-bottom: 10px;
 }
 
 html {
@@ -87,7 +93,7 @@ body {
   height: 120px;
   background-color: darkolivegreen;
     color:white;
-    font-family: 'Oswald' , sans-serif;
+    font-family: 'Old+Standard+TT' , sans-serif;
     padding-top: 20px;
     text-align: right;
 }
