--- a/custom.css
+++ b/custom.css
@@ -1,11 +1,37 @@
 body {
-padding-top: 70px;
+padding-top: 50px;
 padding-bottom: 100px;
+background-color: #F5F4F0;
 }
+
+.navbar-default .navbar-nav .open .dropdown-menu>li>a, .navbar-default .navbar-nav .open .dropdown-menu {
+    background-color: olivedrab;
+    color:#ffffff;
+  }
+
+.dropdown-header{
+    color:darkorange;
+    font-weight: bold;
+}
+
+.top-buffer { margin-top:20px; }
 
 .vcenter {
     display: flex;
     align-items: center;
+}
+
+.donkey {
+    background-image: url("Pictures/smokeymountain.jpg");
+    max-width: 100%;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    color: white;
+    margin-top: 0;
+}
+
+.navbar {
+    margin-bottom: 0;
 }
 
 .navbar-brand {
@@ -94,6 +120,7 @@ body {
   background-color: darkolivegreen;
     color:white;
     font-family: 'Old+Standard+TT' , sans-serif;
+    font-size: 16px;
     padding-top: 20px;
     text-align: right;
 }
