--- a/custom.css
+++ b/custom.css
@@ -125,6 +125,10 @@ body {
     text-align: right;
 }
 
+.foot {
+    font-size: 20px;
+}
+
  .iframe-container {    
     padding-bottom: 60%;
     padding-top: 30px; height: 0; overflow: hidden;
